--- a/template/main.html
+++ b/template/main.html
@@ -15,7 +15,8 @@
      
 </head>
 <body class="booksville" id="background-image"> 
-    
+
+<!-- page header details-->
   <div class="header">
     <div class="container">
       
@@ -35,11 +36,12 @@
         </div>
     </div>
 
+  <!-- login and register tab -->
     <div class="tab" class="col-sm-10 col-sm-offset-4 show-forms">
         <button class="tablinks" onclick="openTab(event, 'register')" style="color: white;">REGISTER</button>
         <button class="tablinks" onclick="openTab(event, 'login')" style="color: white;">LOGIN</button>
     </div>
-    
+      <!-- tab for registration-->
       <div id="register" class="tabcontent" align="center">
       <div id="form-wrapper">
         <form action="/" method="post">
@@ -77,7 +79,7 @@
       </div>
       
    
-    
+    <!-- tab content for login tab-->
     <div id="login" class="tabcontent" align="center">
         <div id="form-wrapper" style="max-width:1000px; ">
             <form action = "/" method = "post">
@@ -97,7 +99,7 @@
         </div>
     </div>    
   
-  </div><!-- tab-content -->
+  </div>
   </div>
 </div>
 
