--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -9,9 +9,21 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 100px;
   padding: 20px;
   color: white;
+  font-family: Comic Sans MS, cursive, sans-serif;
+}
+
+#background-image{
+  width: 100%;
+  height: 20%;
+  background-image: url("./reading.jpg"); 
+  background-size: cover;
+   position: center;
+    top:0;
+    left:0;
+    z-index:0;
 }
 
 .App-intro {
