--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,19 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 100px;
-  padding: 20px;
-  color: white;
-  font-family: Comic Sans MS, cursive, sans-serif;
-}
 
 #background-image{
   width: 100%;
@@ -26,11 +10,14 @@
     z-index:0;
 }
 
-.App-intro {
-  font-size: large;
+.nav-wrapper {
+  font-family: Comic Sans MS, cursive, sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.greeting{
+  font-family: Comic Sans MS, cursive, sans-serif;
+}
+ 
+.front{
+  overflow: visible !important;
 }
