--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,13 +1,7 @@
 
-#background-image{
-  width: 100%;
-  height: 20%;
-  background-image: url("./reading.jpg"); 
-  background-size: cover;
-   position: center;
-    top:0;
-    left:0;
-    z-index:0;
+.background{
+ height: 750px;
+ background-color: #673ab7;
 }
 
 .nav-wrapper {
@@ -20,4 +14,8 @@
  
 .front{
   overflow: visible !important;
+}
+
+#pic{
+  margin-top: 7%;
 }
