--- a/template/main.html
+++ b/template/main.html
@@ -1,106 +1,167 @@
 <!doctype html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <title>hello books</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width initial-scale= 1.0">
-<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/index.js"></script>
-     
-</head>
-<body class="booksville" id="background-image"> 
 
-<!-- page header details-->
-  <div class="header">
-    <div class="container">
-      
-      <div class="row">
-        <div style="background-color: #800080;">
-            <h2 style="color: white; font-family: Comic Sans MS, cursive, sans-serif;"" >WELCOME TO BOOKSVILLE</h1>
-        </div>
-        <div align="right">
-          <ul style="color: white;">
-              <li>
-                  <a style="color: white;" class="page-scroll" href="adminpage.html">Admin</a>
-              </li>
-              <li>
-                  <a style="color: white;" class="page-scroll" href="#services">About us</a>
-              </li>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <title>React App</title>
+</head>
+
+<body>
+
+  <!-- page header details-->
+  <div class='row purple '>
+    <div class="col s12 navbar-fixed white purple-text">
+      <nav>
+        <div class="nav-wrapper white">
+          <a class="brand-logo left purple-text">BOOKSVILLE</a>
+          <ul class="right purple-text">
+            <li><a class='purple-text'>About us</a></li>
           </ul>
         </div>
+      </nav>
     </div>
-
-  <!-- login and register tab -->
-    <div class="tab" class="col-sm-10 col-sm-offset-4 show-forms">
-        <button class="tablinks" onclick="openTab(event, 'register')" style="color: white;">REGISTER</button>
-        <button class="tablinks" onclick="openTab(event, 'login')" style="color: white;">LOGIN</button>
-    </div>
-      <!-- tab for registration-->
-      <div id="register" class="tabcontent" align="center">
-      <div id="form-wrapper">
-        <form action="/" method="post">
-            <input type="text" placeholder="First name" name="firstname" required>
-              <br>
-            <input type="text" placeholder="Last name" name="lastname" required>
-              <br>
-            <input type="text" placeholder="Email" name="email" required>
-              <br>
-            <input type="text" placeholder="Username" name="username" required>
-              <br>
-            <input type="password" placeholder="Password" name="password" required>
-              <br>
-              <label style="color: white;"><b>Membership Level</b></label>
-              <select name="cars">
-                <option value="rookie">Rookie</option>
-                <option value="bookworm">Bookworm N2000/month</option>
-                <option value="voracious">Voracious N5000/month</option>
-                <option value="admin">Admin</option>
-              </select>
-              <br>
-              <p style="color: white;">By creating an account you agree to our Terms & Conditions</a></p>
-
-              <div class="clearfix" align="center">
-                <button type="submit" class="btn">Sign Up</button>
+    <div class="row">
+      <img src='images/girl.png' class="col l4 m4 offset-m1 offset-l1 hide-on-small-only" id="pic" alt="BOOKSVILLE" style="margin-top: 7%;"
+      />
+      <!-- login and register tab -->
+      <div class="col s12 l6 m6 offset-m1 offset-l1">
+        <div>
+          <ul class="tabs">
+            <li class="tab col s3 offset-s3"><a href="#signup">SIGNUP</a></li>
+            <li class="tab col s3"><a class="active" href="#login">LOGIN</a></li>
+          </ul>
+        </div>
+        <!-- tab for registration-->
+        <div id="signup" class="row">
+          <div class='col s12 m12 l12 offset-m1 '>
+            <div class='card front'>
+              <div class='row'>
+                <div class='col s10 m10 l10 offset-m1 offset-s1 offset-l1'>
+                  <h5 class='center purple-text'>New User? Please fill your details and begin your journey with us!</h5>
+                  <form>
+                    <div class='row'>
+                      <div class="input-field col s6">
+                        <input id="firstname" type="text" class="validate">
+                        <label for="firstname">First Name</label>
+                      </div>
+                      <div class="input-field col s6">
+                        <input id="lastname" type="text" class="validate">
+                        <label for="lastname">Last Name</label>
+                      </div>
+                    </div>
+                    <div class='row'>
+                      <div class="input-field col s6">
+                        <input id="email" type="text" class="validate">
+                        <label for="email">Email</label>
+                      </div>
+                      <div class="input-field col s6">
+                        <input id="username" type="text" class="validate">
+                        <label for="username">User Name</label>
+                      </div>
+                    </div>
+                    <div class='row'>
+                      <div class="input-field col s6">
+                        <input id="password" type="text" class="validate">
+                        <label for="password">Password</label>
+                      </div>
+                      <div class="input-field col s6">
+                        <input id="confirmpassword" type="text" class="validate">
+                        <label for="confirmpassword">Confirm Password</label>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="input-field col s12 m6 l6">
+                        <select class="icons">
+                        <option value="" disabled selected>Select</option>
+                        <option value="rookie" data-icon="images/rookie.jpg" class="left circle">Rookie</option>
+                        <option value="bookworm" data-icon="images/bookworm.png" class="left circle">Bookworm  N2000/month</option>
+                        <option value="voracious" data-icon="images/voracious.jpg" class="left circle">Voracious  N5000/month</option>
+                        <option value="admin" data-icon="images/admin.jpg" class="left circle">Admin</option>
+                      </select>
+                        <label>Membership Level</label>
+                      </div>
+                      <p class='col s12 m6 l6'>
+                        <input type="checkbox" id="agreed" />
+                        <label for="agreed">"By checking this box, you agree to our Terms & Conditions"</label>
+                      </p>
+                    </div>
+                    <div class="row">
+                      <div class="col s12 m4 l6">
+                        <a class="waves-effect waves-light btn purple"><i class="material-icons right">account_box</i>SIGN UP</a>
+                      </div>
+                    </div>
+                    <div class='row'>
+                      <div class="col s6 m4 l4">
+                        <p>Or signup with:</p>
+                      </div>
+                      <div class="col s12 m6 l6">
+                        <a class="waves-effect waves-light btn purple"><i class="fa fa-google-plus"></i>GOOGLE PLUS</a>
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
-        </form>
-        <div class="social-login">
-            <p class="google">Or signup with:</p>
-            <div class="social-login-buttons">
-                <a class="btn-link-1" href="#"><i class="fa fa-google-plus"></i></a>
             </div>
-        </div>
-      </div>
-      </div>
-      
-   
-    <!-- tab content for login tab-->
-    <div id="login" class="tabcontent" align="center">
-        <div id="form-wrapper" style="max-width:1000px; ">
-            <form action = "/" method = "post">
-                <input id="username" type="text" placeholder="Username" name="username" required>
-                <br>
-                <input id = "psw" type="password" placeholder="Password" name="psw" required>
-                <br>
-                <button id = "loginid" type="submit" class="btn" style="font-size: 14px">Login</button>
-                <br>
-            </form>
           </div>
-            <div class="social-login">
-                <p class="google">Or login with:</p>
-                <a class="btn-link-1" href="userPage.html"><i class="fa fa-google-plus"></i></a>
-                </div>    
-            </div>
         </div>
-    </div>    
-  
+        <!-- tab content for login tab-->
+        <div id="login" class="row">
+          <div class='col s12 m10 l10 offset-m1'>
+            <div class='card front row'>
+              <div class='col s10 m10 l8 offset-m1 offset-s1 offset-l2'>
+                <h5 class='center purple-text'>Welcome back! Login to continue</h5>
+                <form>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input id="username" type="text" class="validate">
+                      <label for="username">User Name</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input id="password" type="text" class="validate">
+                      <label for="password">Password</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <a class="waves-effect waves-light btn purple"><i class="material-icons right">send</i>LOGIN</a>
+                    </div>
+                  </div>
+                </form>
+                <div class="row">
+                  <div class="col s12">
+                    <p>Or login with:</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12">
+                    <a class="waves-effect waves-light btn purple"><i class="fa fa-google-plus"></i>GOOGLE PLUS</a>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  </div>
-</div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('select').material_select();
+    });
+  </script>
 
 </body>
