--- a/template/adminpage.html
+++ b/template/adminpage.html
@@ -85,7 +85,7 @@
 						<img class="activator responsive-img" src="images/davinci.jpg">
 					</div>
 					<div class="card-content">
-						<span class="card-title activator responsive-img grey-text text-darken-4"><i class="material-icons left">more_vert</i>DAVINCI CODE</span>
+						<span class="card-title activator grey-text text-darken-4"><i class="material-icons left">more_vert</i>DAVINCI CODE</span>
 						<p><a href="#">BORROW</a></p>
 					</div>
 					<div class="card-reveal">
