create user signup feature

--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -60,3 +60,16 @@ Navlink{
 .level-icon{
   margin-top:25% !important;
 }
+
+.background-set{
+  height: 850px;
+  background-color: #303f9f ;
+ }
+  
+ .front{
+   overflow: visible !important;
+ }
+ 
+ #pic{
+   margin-top: 7%;
+ }
