--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -57,8 +57,8 @@ body{
 Navlink{
   color: white;
 }
-.level-icon{
-  margin-top:25% !important;
+.hello{
+  margin-top:12% !important;
 }
 
 .background-set{
