--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,6 +1,7 @@
-
+//default fonts
 body{
-	font-family: -apple-system,
+  font-family: 'Rubik', sans-serif,
+  -apple-system,
 	BlinkMacSystemFont,
 	"Segoe UI",
 	Roboto,
@@ -9,7 +10,22 @@ body{
 	Cantarell,
 	"Helvetica Neue",
 	sans-serif !important;
+}
 
+.home{
+  background:none !important;
+   -webkit-box-shadow: none !important; 
+   box-shadow: none !important; 
+ }
+input-field input[type=text].invalid {
+  border-bottom: 1px solid #000;
+  box-shadow: 0 1px 0 0 #000;
+  color: black;
+}
+
+.front-signup{
+  margin-top: 10%;
+  overflow: visible !important;
 }
 .tabs{
   overflow-x: hidden;
@@ -77,3 +93,46 @@ Navlink{
  .signin{
  margin-top: 25%;
  }
+
+ .profile{
+   margin-top: 5%;
+   
+ }
+
+ .profile img{
+  margin-top: 10%;
+}
+
+c{
+  color:#455a64;
+}
+ .levelLink{
+  margin-top: 2%;
+  margin-bottom: 10%;
+}
+.level{
+  margin: 2px;
+}
+.level-select{
+  margin-bottom: 10%;
+  margin-top: 10%;
+}
+.margin-fix{
+  margin-bottom: 10%;
+  margin-top: 10%;
+}
+
+.photo{
+  border: 4px solid black;
+  max-height: 200px !important;
+  max-width: 200px !important;
+}
+
+.details{
+  border: 1px solid black;
+  background-color: white;
+}
+
+.link-cursor{
+  cursor: pointer !important;
+}
