--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -123,15 +123,14 @@ c{
 }
 
 .photo{
-  border: 4px solid black;
+  border: 4px solid #303f9f;
   max-height: 200px !important;
   max-width: 200px !important;
 }
 
-.details{
-  border: 1px solid black;
-  background-color: white;
-}
+// .details{
+//   border: 1px solid white;
+// }
 
 .link-cursor{
   cursor: pointer !important;
