--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -98,7 +98,10 @@ Navlink{
    margin-top: 5%;
    
  }
-
+.user{
+  color: white;
+  padding-bottom: 4% !important;
+}
  .profile img{
   margin-top: 10%;
 }
@@ -126,12 +129,17 @@ c{
   border: 4px solid #303f9f;
   max-height: 200px !important;
   max-width: 200px !important;
+  margin-top: 8%;
 }
 
 // .details{
-//   border: 1px solid white;
+//  text-align: right;
 // }
 
+// .details-right{
+//   text-align: left;
+//  }
+ 
 .link-cursor{
   cursor: pointer !important;
 }
