--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -124,7 +124,17 @@ c{
   margin-bottom: 10%;
   margin-top: 10%;
 }
-
+.level-icon{
+  margin-top: 10%;
+}
+.level-icon img{
+  margin-top: 10%;
+  max-height: 40px !important;
+  max-width: 40px !important;
+}
+.user-logo a{
+  color: #303f9f;
+}
 .photo{
   border: 4px solid #303f9f;
   max-height: 200px !important;
@@ -132,13 +142,13 @@ c{
   margin-top: 8%;
 }
 
-// .details{
-//  text-align: right;
-// }
+.details-left{
+  margin-top: 2%;
+}
 
-// .details-right{
-//   text-align: left;
-//  }
+.edit-form p{
+  color: #303f9f;
+}
  
 .link-cursor{
   cursor: pointer !important;
