implement coveralls badge

--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -136,7 +136,7 @@ c{
   color: #303f9f;
 }
 .photo{
-  border: 4px solid #303f9f;
+  border: 4px solid white;
   max-height: 200px !important;
   max-width: 200px !important;
   margin-top: 8%;
@@ -153,3 +153,5 @@ c{
 .link-cursor{
   cursor: pointer !important;
 }
+
+
