--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -215,3 +215,16 @@ c{
 .pagination li a:hover {
   color: white!important;
 }
+
+.swal-modal, .swal-icon--success {
+  background-color: #303f9f;
+}
+
+.swal-icon--warning, .swal-text, .swal-title {
+  color: white;
+}
+
+.swal-button--danger, .swal-button--confirm {
+  background-color: white;
+  color: #303f9f;
+}
