--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -10,6 +10,17 @@ body{
   sans-serif !important;
   font-weight: light;
 }
+#card-book {
+  padding: 0px;
+  padding-top: 20px;
+  border-radius: 0 0 2px 2px;
+  font-size: 10px !important;
+}
+.card-title {
+  font-family:'Eczar', serif;
+  font-size: 20px !important;
+  // font-weight: bold !important;
+}
 .deleteColor{
   background-color: #4e75dc;
 }
@@ -99,7 +110,10 @@ input-field input[type=text].invalid {
 }
 
 .book-image{
-	max-height: 70% !important;
+  margin-top: 10% !important;
+  margin-left: 20%;
+  max-height: 70% !important;
+  max-width: 60% !important;
 }
 .activator{
 	width: auto;
@@ -216,15 +230,109 @@ c{
   color: white!important;
 }
 
+.pagination li:disabled,
+.pagination li[disabled]
+ {
+   cursor: not-allowed;
+  background-color: #fff;
+  & a:hover{
+    color: grey !important;
+  }
+}
+
 .swal-modal, .swal-icon--success {
-  background-color: #303f9f;
+  background-color: #303f9f!important;
 }
 
-.swal-icon--warning, .swal-text, .swal-title {
-  color: white;
+.swal-icon, .swal-icon--warning, .swal-text, .swal-title {
+  color: white !important;
+  border-color: white !important;
+  background-color: #303f9f!important;
 }
 
-.swal-button--danger, .swal-button--confirm {
-  background-color: white;
-  color: #303f9f;
+.swal-icon--warning__body, .swal-icon--warning__dot {
+  background-color: white !important;
 }
+.swal-button--danger, .swal-button--confirm, .swal-button{
+  background-color: white !important;
+  color: #303f9f!important;
+}
+.swal-icon--success__ring {
+  border-color: #a5dc86 !important;
+  
+}
+.swal-icon--success__line, .swal-icon--success__line--long .swal-icon--success__line--tip {
+  background-color: #a5dc86 !important;
+}
+.swal-icon--success:before, .swal-icon--success:after, .swal-icon--success__hide-corners {
+  background-color: #303f9f!important;
+}
+@keyframes pulseWarning {
+  0%{
+    border-color: white !important;
+  }
+  100%{
+    border-color: white !important;
+  }
+}
+
+.loader-body :before,
+.loader-body :after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.loader {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin: 75px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.loader-1 .loader-outter {
+  position: absolute;
+  border: 4px solid #303f9f;
+  border-left-color: transparent;
+  border-bottom: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -webkit-animation: loader-1-outter 1s cubic-bezier(.42, .61, .58, .41) infinite;
+  animation: loader-1-outter 1s cubic-bezier(.42, .61, .58, .41) infinite;
+}
+
+.loader-1 .loader-inner {
+  position: absolute;
+  border: 4px solid #303f9f;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  left: calc(50% - 20px);
+  top: calc(50% - 20px);
+  border-right: 0;
+  border-top-color: transparent;
+  -webkit-animation: loader-1-inner 1s cubic-bezier(.42, .61, .58, .41) infinite;
+  animation: loader-1-inner 1s cubic-bezier(.42, .61, .58, .41) infinite;
+}
+
+tbody {
+  display:block;
+  height:500px;
+  overflow:auto;
+  }
+  thead, tbody tr {
+  display:table;
+  width:100%;
+  table-layout:fixed;
+  }
+  thead {
+  width: calc( 100% - 1em )
+  }
+  table {
+  width:100%;
+  }
