feat(search): allow users to search for books in the library
solve hound issues

--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -177,6 +177,9 @@ c{
   margin-bottom: 10%;
   margin-top: 10%;
 }
+.input-fix {
+  padding-top: 10%;
+}
 .level-icon{
   margin-top: 10%;
 }
@@ -336,3 +339,7 @@ tbody {
   table {
   width:100%;
   }
+
+.prefix {
+  margin-top: 1%;
+}
