--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,5 +1,7 @@
 //default fonts
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import './_theme.scss';
+
 html {
   height: 100%;
 }
@@ -13,7 +15,7 @@ body{
   sans-serif !important;
   font-weight: light;
   height: 100%;
-  background-color: #f5f5f5;
+  // background-color: $light-background;
 }
 #card-book {
   padding: 0px;
@@ -24,16 +26,16 @@ body{
 .card-title {
   font-family:'Eczar', serif;
   font-size: 20px !important;
-  // font-weight: bold !important;
 }
-.deleteColor{
-  background-color: #4e75dc;
+
+.delete-color{
+  background-color: $light-blue;
 }
-.editColor{
-  background-color: #a6c2fa;
+.edit-color{
+  background-color: $faint-blue;
 }
 .book-buttons a:hover{
-  background-color: #303f9f !important;
+  background-color: $dark-blue !important;
 }
 .brand-logo{
   font-family:'Eczar', serif;
@@ -60,7 +62,7 @@ body{
 }
 .cat-name{
   font-family:'Eczar', serif;
-  color: #303f9f;
+  color: $dark-blue;
 }
 
 .nav-wrapper ul{
@@ -76,11 +78,11 @@ body{
    box-shadow: none !important; 
  }
 input-field input[type=text].invalid {
-  border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
-  color: black;
+  border-bottom: 1px solid $main-black;
+  box-shadow: 0 1px 0 0 $main-black;
+  color: $main-black;
 }
-.catCard{
+.cat-card{
   margin-top: 10%;
 }
 .front-signup{
@@ -89,34 +91,34 @@ input-field input[type=text].invalid {
 }
 .tabs{
   overflow-x: hidden;
-  background-color: #303f9f ;
+  background-color: $dark-blue;
 }
 .tabs .indicator {
-  color: white !important;
-  background-color: white !important; 
+  color: $main-white !important;
+  background-color: $main-white !important; 
 }  
 
 .tabs .tab a{
-  color:white !important;
+  color:$main-white !important;
 }
 
 .tabs .tab a:hover {
-  background-color: white!important;
-  color: #303f9f !important;
-} /*Text color on hover*/
+  background-color: $main-white!important;
+  color: $dark-blue !important;
+}
 
 .tabs .tab a.active {
-  color: #303f9f !important;
-  background-color: white;
-} /*Background and text color when a tab is active*/
+  color: $dark-blue !important;
+  background-color: $main-white;
+}
 
 .input-field input:focus + label {
-  color: #303f9f  !important;
+  color: $dark-blue  !important;
 }
 /* label underline focus color */
 .row .input-field input:focus {
-  border-bottom: 1px solid #303f9f  !important;
-  box-shadow: 0 1px 0 0 #303f9f  !important
+  border-bottom: 1px solid $dark-blue  !important;
+  box-shadow: 0 1px 0 0 $dark-blue  !important
 }
 .content-wrapper{
   min-height: calc(100vh - 180px);
@@ -142,14 +144,14 @@ i .activator .right {
 	object-fit: contain;
 }
 Navlink{
-  color: white;
+  color: $main-white;
 }
 .hello{
   margin-top:12% !important;
 }
 
 .background-set{
-  background-color: #303f9f;
+  background-color: $dark-blue;
   min-height: 100%;
   position: relative;
  }
@@ -176,7 +178,7 @@ Navlink{
    
  }
 .user{
-  color: white;
+  color: $main-white;
   padding-bottom: 4% !important;
 }
  .profile img{
@@ -184,7 +186,7 @@ Navlink{
 }
 
 c{
-  color:#455a64;
+  color:$dark-grey;
 }
  .levelLink{
   margin-top: 2%;
@@ -225,10 +227,10 @@ c{
   max-width: 30px !important;
 }
 .user-logo a{
-  color: #303f9f;
+  color: $dark-blue;
 }
 .photo{
-  border: 4px solid white;
+  border: 4px solid $main-white;
   height: 200px !important;
   width: 200px !important;
   margin-top: 8%;
@@ -239,7 +241,7 @@ c{
 }
 
 .edit-form p{
-  color: #303f9f;
+  color: $dark-blue;
 }
  
 .link-cursor{
@@ -250,64 +252,64 @@ c{
   margin-left: 6%;
 }
 .pagination li.active {
-  background-color: #303f9f;
+  background-color: $dark-blue;
 }
 
 .pagination li:hover {
-  background-color: #303f9f;
+  background-color: $dark-blue;
 }
 
 .pagination li a {
-  color: #303f9f;
+  color: $dark-blue;
 }
 
 .pagination li a:hover {
-  color: white!important;
+  color: $main-white!important;
 }
 
 .pagination li:disabled,
 .pagination li[disabled]
  {
    cursor: not-allowed;
-  background-color: #fff;
+  background-color: $main-white;
   & a:hover{
     color: grey !important;
   }
 }
 
 .swal-modal, .swal-icon--success {
-  background-color: #303f9f!important;
+  background-color: $dark-blue!important;
 }
 
 .swal-icon, .swal-icon--warning, .swal-text, .swal-title {
-  color: white !important;
-  border-color: white !important;
-  background-color: #303f9f!important;
+  color: $main-white !important;
+  border-color: $main-white !important;
+  background-color: $dark-blue!important;
 }
 
 .swal-icon--warning__body, .swal-icon--warning__dot {
-  background-color: white !important;
+  background-color: $main-white !important;
 }
 .swal-button--danger, .swal-button--confirm, .swal-button{
-  background-color: white !important;
-  color: #303f9f!important;
+  background-color: $main-white !important;
+  color: $dark-blue!important;
 }
 .swal-icon--success__ring {
-  border-color: #a5dc86 !important;
+  border-color: $success-color!important;
   
 }
 .swal-icon--success__line, .swal-icon--success__line--long .swal-icon--success__line--tip {
-  background-color: #a5dc86 !important;
+  background-color: $success-color!important;
 }
 .swal-icon--success:before, .swal-icon--success:after, .swal-icon--success__hide-corners {
-  background-color: #303f9f!important;
+  background-color: $dark-blue!important;
 }
 @keyframes pulseWarning {
   0%{
-    border-color: white !important;
+    border-color:$main-white !important;
   }
   100%{
-    border-color: white !important;
+    border-color: $main-white !important;
   }
 }
 
@@ -402,8 +404,8 @@ tbody {
   width: 100%;
   z-index: 1;
   font-size: .6875rem;
-  border-top: .0625rem solid #ddd;
-  background-color: #fff;
+  border-top: .0625rem solid $light-grey;
+  background-color: $main-white;
   padding: .625rem;
   text-align: center;
 }
